--- a/style.css
+++ b/style.css
@@ -25,49 +25,49 @@ img {
 }
 
 body {
-  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   background: var(--clr-ltgrey);
 }
 
 .container {
-  display: flex;
-  margin: 40px;
-  align-items: center;
-  justify-content: center;
-}
-
-.card {
+  max-width: 22rem;
+  margin: auto auto 0 auto;
   background: var(--clr-white);
-  max-width: 370px;
-  border-radius: 20px;
+  padding: 15px;
+  border-radius: 15px;
   box-shadow: 10px 10px 25px 2px rgba(0, 0, 0, 0.25);
+  justify-content: center;
+  align-content: center;
 }
 
-.card-qrcode {
+.qrcode {
   display: block;
-  max-width: 340px;
-  margin: 15px;
-  border-radius: 20px;
+  border-radius: 15px;
 }
 
-.card-title {
+.title {
   font-size: 1.5rem;
-  text-align: center;
-  margin: 0 30px;
+  margin: 15px 5px 0;
   color: var(--clr-dkblue);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
     
-.card-desc {
+.desc {
   font-size: 1rem;
-  text-align: center;
-  margin: 0 30px 20px;
-  padding: 20px;
+  margin: 10px 30px 20px 30px;
   color: var(--clr-greyblue);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .attribution {
-  font-size: 11px;
-  margin-top: -25px;
+  font-size: 0.8rem;
+  margin: 0 0 auto 0;
   text-align: center;
   color: hsl(228, 45%, 44%);
 }
